# crewai-revettr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crewai_revettr/: __init__.py  tools.py
tests/: test_new_tools.py  test_revettr_score_tool.py
